@@ -1,7 +1,11 @@
 Date	Added
 
-03/17
+03/18
+        * Fixed the bDamageWhenUnequip effect dealing damage when unequipping unrelated
+          items [celest]
         * Fixed compile errors in SQL char.c [celest]
+
+03/17
 	* Added ~86 new cards. Fixed new cards bugs, optimized [Lupus] thanks to Indiona,Landarma
 	* Removed nullpo warning from trade.c (my prev anti-spoof protection) [Lupus]
         * Added the new Einbroch/Einbech maps to maps_athena.conf [celest]
